lib_LTLIBRARIES = libnkfnet.la

libnkfnet_la_LDFLAGS = -version-info 1:0:0

nobase_include_HEADERS = \
	nkf/defines.h \
	nkf/net/net.h \
	nkf/net/Address.h \
	nkf/net/Socket.h \
	nkf/net/SocketException.h \
	nkf/net/SocketSet.h

libnkfnet_la_SOURCES = \
	nkf/net/net.cpp \
	nkf/net/Address.cpp \
	nkf/net/Socket.cpp \
	nkf/net/SocketException.cpp \
	nkf/net/SocketSet.cpp

